--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
   </button>
 </div>
 
-<h2 id="iframeEmbedHeading">Comments Section</h2>
+<!-- <h2 id="iframeEmbedHeading">Comments Section</h2> -->
 <!-- <iframe id="theFrame" src="page.html" title="embedded page"></iframe> -->
 
 <div class="survey-footer" aria-hidden="false">
@@ -2316,5 +2316,6 @@ loadQuestion(currentQuestionIndex);
 </script>
 </body>
 </html>
+
 
 
