--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   .options{ display:flex; flex-direction:column; gap:10px; }
 
   .option-btn, .input-wrapper{
-    padding:3px 6px; border-radius:var(--radius); border:1px solid var(--input-border);
+    max-width:100%; padding:10px 15px; border-radius:var(--radius); border:1px solid var(--input-border);
     background:var(--input-bg); transition:all .18s ease; color:var(--text-color-secondary); font-size:var(--fs-answer);
   }
 
@@ -2316,6 +2316,7 @@ loadQuestion(currentQuestionIndex);
 </script>
 </body>
 </html>
+
 
 
 
