--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     --fs-question: 1.1em;
     --fs-desc: 0.95em;
     --fs-answer: 1em;
-    --fs-input: 1em;
+    --fs-input: 16px;
     --fs-input-label: 0.95em;
     --fs-comment: 1em;
     --fs-btn-main: 1em;
@@ -2316,6 +2316,7 @@ loadQuestion(currentQuestionIndex);
 </script>
 </body>
 </html>
+
 
 
 
