--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   :root{
     /* theme: change once here or via surveyConfig.themeColor */
-    --primary-color: #32a852;
+    --primary-color: #076effff;
     --primary-color-light: rgb(231, 248, 236); /* runtime override */
     --error-color: #e53935;
     --error-light: rgba(229,57,53,0.12);
@@ -66,14 +66,15 @@
     --btn-line-height: 1;
 
     /* font size variables (defaults) */
-    --fs-question: 1.1em;
-    --fs-desc: 0.95em;
-    --fs-answer: 1em;
-    --fs-input: 1em;
-    --fs-input-label: 0.95em;
-    --fs-comment: 1em;
-    --fs-btn-main: 1em;
-    --fs-btn-sub: 0.82em;
+    --fs-question: 17.6px;
+    --fs-desc: 14px;
+    --fs-answer: 14px;
+    --fs-input: 14px;
+    --fs-input-label: 14px;
+    --fs-comment: 14px;
+    --fs-btn-main: 16px;
+    --fs-btn-sub: 13.1px;
+
     --fs-disclaimer: 11px;
     --fs-copyright: 12px;
 
@@ -310,8 +311,8 @@
   @media (max-width:480px){ .question{ font-size: calc(var(--fs-question) - .08em); } }
 
   /* ===== embedded iframe styles (from external embed doc) ===== */
-  #iframeEmbedHeading { margin: 20px 0 0px; font-weight:700; font-size:1.3em; color:var(--text-color-primary); 
-                        margin-bottom: -45px; flex-direction:column; gap:12px; place-self: start center;}
+  #iframeEmbedHeading { margin: 20px 0 0px; font-weight:700; font-size:18px; color:var(--text-color-primary); 
+                        margin-bottom: 0px; flex-direction:column; gap:12px; place-self: start center;}
   #theFrame {
     display: block;
     border: 0;
