--- a/reports/ps/index.html
+++ b/reports/ps/index.html
@@ -66,14 +66,15 @@
     --btn-line-height: 1;
 
     /* font size variables (defaults) */
-    --fs-question: 1.1em;
-    --fs-desc: 0.95em;
-    --fs-answer: 1em;
-    --fs-input: 1em;
-    --fs-input-label: 0.95em;
-    --fs-comment: 1em;
-    --fs-btn-main: 1em;
-    --fs-btn-sub: 0.82em;
+    --fs-question: 17.6px;
+    --fs-desc: 14px;
+    --fs-answer: 14px;
+    --fs-input: 14px;
+    --fs-input-label: 14px;
+    --fs-comment: 14px;
+    --fs-btn-main: 16px;
+    --fs-btn-sub: 13.1px;
+
     --fs-disclaimer: 11px;
     --fs-copyright: 12px;
 
@@ -2369,4 +2370,5 @@ loadQuestion(currentQuestionIndex);
 </script>
 </body>
 </html>
+
 
