--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
   </button>
 </div>
 
-<h2 id="iframeEmbedHeading">Comments Section</h2>
+<h2 id="iframeEmbedHeading">reviews</h2>
 <iframe id="theFrame" src="page.html" title="embedded page"></iframe>
 
 <div class="survey-footer" aria-hidden="false">
@@ -2370,6 +2370,7 @@ loadQuestion(currentQuestionIndex);
 </script>
 </body>
 </html>
+
 
 
 
